hphp/hack/test/typecheck/records/record_decl_bad_type.php
<?hh

record A {
  self x;
}

record B {
  this x;
}
